tests/paczka1/small_fuzzy/97920340.err
Error in line 2: A476 A725 77,6
Error in line 4: oDhax21Y A335 25,1
Error in line 12: a7joZw A531 83,8
